Add Base Elemental Interaction System

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -329,4 +329,7 @@ AppliedDefaultGraphicsPerformance=Scalable
 +EnumRedirects=(OldName="/Script/Dark.EHandsMode",ValueChanges=(("HANDS_Melee","Hands_Melee")))
 +PropertyRedirects=(OldName="/Script/Dark.HandsControllerComponent.CurrentInteractable",NewName="/Script/Dark.HandsControllerComponent.PosiblyInteractable")
 +ClassRedirects=(OldName="/Script/Dark.InteractableValveReturning",NewName="/Script/Dark.InteractableValveReturningComponent")
++ClassRedirects=(OldName="/Script/Dark.WaterInteractObject",NewName="/Script/Dark.IgnitableObjectComponent")
++FunctionRedirects=(OldName="/Script/Dark.IReactive.Ignition",NewName="/Script/Dark.IReactive.ReactToElement")
++ClassRedirects=(OldName="/Script/Dark.IgnitableObject",NewName="/Script/Dark.IgnitableObjectComponent")
 
