--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -332,6 +332,7 @@ AppliedDefaultGraphicsPerformance=Scalable
 +ClassRedirects=(OldName="/Script/Dark.WaterInteractObject",NewName="/Script/Dark.IgnitableObjectComponent")
 +FunctionRedirects=(OldName="/Script/Dark.IReactive.Ignition",NewName="/Script/Dark.IReactive.ReactToElement")
 +ClassRedirects=(OldName="/Script/Dark.IgnitableObject",NewName="/Script/Dark.IgnitableObjectComponent")
++ClassRedirects=(OldName="/Script/Dark.SwordSkeletalMeshComponent",NewName="/Script/Dark.ElectricGauntletSkeletalMeshComponent")
 
 [/Script/Engine.PhysicsSettings]
 PhysicsPrediction=(bEnablePhysicsPrediction=False,bEnablePhysicsHistoryCapture=False,MaxSupportedLatencyPrediction=1000.000000,ResimulationSettings=(bEnableResimulationErrorPositionThreshold=True,ResimulationErrorPositionThreshold=10.000000,bEnableResimulationErrorRotationThreshold=True,ResimulationErrorRotationThreshold=4.000000,bEnableResimulationErrorLinearVelocityThreshold=False,ResimulationErrorLinearVelocityThreshold=5.000000,bEnableResimulationErrorAngularVelocityThreshold=False,ResimulationErrorAngularVelocityThreshold=2.000000))
